@startuml
skinparam classAttributeIconSize 0

class Student {
  - studentID: String
  - name: String
  - email: String
  - password: String
  - credits: int
  - activities: List<Activity>
  + Student(studentID: String, name: String, email: String, password: String, credits: int)
  + checkPassword(pwd: String): boolean
  + createActivity(activityName: String, price: int, description: String, category: Category): Activity
  + getActivities(): List<Activity>
  + getStudentID(): String
  + getName(): String
  + getEmail(): String
  + getCredits(): int
}

class Category {
  - categoryName: String
  - activities: List<Activity>
  + Category(categoryName: String)
  + getCategoryName(): String
  + addActivity(activity: Activity): void
  + getActivities(): List<Activity>
}

class Activity {
  - activityName: String
  - price: int
  - description: String
  - category: Category
  + Activity(activityName: String, price: int, description: String, category: Category)
  + getActivityName(): String
  + getPrice(): int
  + getDescription(): String
  + getCategory(): Category
}

class Transaction {
  - transaction_ID: String
  - date: String
  - amount: int
}

class Review {
  - reviewID: String
  - rating: int
  - comment: String
  - date: String
}

Student "1" *-- "*" Activity : owns >
Category "1" o-- "*" Activity : groups >
Student "1" -- "*" Transaction : initiates >
Transaction "1" -- "1" Activity : is for >
Transaction "1" *-- "0..1" Review : generates >
Student ..> Activity : creates >

@enduml